legacy/grammar.js
        source_file: $ => repeat(seq($._declaration, $._newline)),

        ////////////////////////////////////////////////////////////////////////
        // Comment
        ////////////////////////////////////////////////////////////////////////

        comment: $ => token(choice(
            prec(100, seq('--', /.*/)),
            seq('{--}'),
            seq(
                '{-',
                /[^#]/,
                repeat(choice(
                    /[^-]/,     // anything but -
                    /-[^}]/,    // - not followed by }
                )),
                /-}/
            )
        )),

        ////////////////////////////////////////////////////////////////////////
        // Constants
        ////////////////////////////////////////////////////////////////////////

        _const_right_arrow: $ => token(choice('->','→')),
        _const_lambda: $ => token(choice('\\','λ')),
        name: $ => name,
        qualified_name: $ => qualified_name,

        _binding_name: $ => alias(choice(
            $.name,
            $.anonymous_name,
        ), $.binding_name),

        // identifiers which may be surrounded by braces or dotted.
        _arg_names: $ => repeat1($._arg_name),
        _declaration_block: $ => block($, $._declaration),

        _declaration: $ => choice(
            $.function_clause,
            $.data_signature_only,
            $.record_signature_only,
            $.module_macro,
            $.open,
            $.infix,
            $.pattern,
            $.syntax,
            $.data,
            $.record,
            $.module,
            $.field,
            $.generalize,
            $.mutual,
            $.abstract,
            $.private,
            $.instance,
            $.macro,
            $.postulate,
            $.primitive,
            $.test,
        ),

        ////////////////////////////////////////////////////////////////////////
        ////////////////////////////////////////////////////////////////////////
        ////////////////////////////////////////////////////////////////////////
        //
        // Inline Declarations
        //
        ////////////////////////////////////////////////////////////////////////
        ////////////////////////////////////////////////////////////////////////
        ////////////////////////////////////////////////////////////////////////

        ////////////////////////////////////////////////////////////////////////
        // Function clauses
        ////////////////////////////////////////////////////////////////////////

        // Function declarations. The left hand side is parsed as an expression
        // to allow declarations like 'x::xs ++ ys = e', when '::' has higher
        // precedence than '++'.
        // function_clause also handle possibly dotted type signatures.
        function_clause: $ => choice(
            seq(
                alias($.lhs_decl, $.lhs),
                optional(alias($.rhs_decl, $.rhs)),
                optional($.where_clause),
            ),
            seq(
                alias($.lhs_defn, $.lhs),
                optional(alias($.rhs_defn, $.rhs)),
                optional($.where_clause),
            ),
        ),

        _module_name: $ => alias($.qualified_name, $.module_name),

        open: $ => seq(
            choice(
                seq(        'import'),
                seq('open', 'import'),
                seq('open'          ),
            ),
            $._module_name,
            optional($._open_as),
            optional($._open_args1),
            repeat($.import_directive),
        ),

        _open_as: $ => seq('as', $._module_name),

        _open_args1: $ => repeat1($.atom),

        import_directive: $ => choice(
            'public',
            seq('using', '(', $._comma_import_names1 ,')'),
            seq('hiding', '(', $._comma_import_names1 ,')'),
            seq('renaming', '(', sepR(';', $.renaming) ,')'),
            seq('using', '(' ,')'),
            seq('hiding', '(' ,')'),
            seq('renaming', '(' ,')')
        ),

        renaming: $ => seq(
            optional('module'),
            $.name,
            'to',
            $.name
        ),

        _comma_import_names1: $ => sepR(';', $._import_name),

        ////////////////////////////////////////////////////////////////////////
        module: $ => seq(
            'module',
            alias(choice($.qualified_name, $.anonymous_name), $.module_name),
            optional($._typed_untyped_binding1),
            'where',
            optional($._declaration_block)
        ),

        field: $ => seq(
            'field',
            $._type_sig_block,
        ),

        // A variant of TypeSignatures which uses arg_type_signatures instead of
        // _type_signature
        _type_sig_block: $ => block($, choice(
            $.type_sig,
            $.type_sig_instance,
        )),

        // A variant of _type_signature where any sub-sequence of names can be
        // marked as hidden or irrelevant using braces and dots:
        // {n1 .n2} n3 .n4 {n5} .{n6 n7} ... : Type.
        type_sig: $ => seq(
            optional('overlap'),
            $._arg_names,
            ':',
            $.expr,
        ),
        _lambda_binding: $ => choice(
            seq($.untyped_binding, $._lambda_binding),
            seq($.typed_binding, $._lambda_binding),
            $.untyped_binding,
            $.typed_binding,
            bracket(
              seq(),
              BKT_PAREN,
              BKT_CURLS,
            ),
        ),

        _lambda_clauses_no_single_absurd: $ => choice(
            // length of 2 or above
            seq($._lambda_clauses_no_single_absurd, ';', $._lambda_clause),
            // length of 2
            seq($.lambda_clause_absurd, ';', $._lambda_clause),
            // length of 1
            seq($.lambda_clause),
        ),

        // Appears after "where"
        // Parses all extended lambda clauses including a single absurd clause.
        // For λ where this is not taken care of in AbsurdLambda
        _lambda_where_block: $ => block($, $._lambda_clause),

        untyped_binding: $ => maybeDotted(choice(
            seq($._binding_name),
            bracket(
              $._application,
              BKT_CURLS,
            ),
        )),

        _typed_bindings1: $ => (repeat1($.typed_binding)),

        // "TypedBindings"
        typed_binding: $ => choice(
            maybeDotted(bracket(
              seq($._application, ':', $.expr),
              BKT_PAREN,
              BKT_CURLS,
            )),
            bracket(
              $.open,
              BKT_PAREN,
            ),
            // seq('(', 'let', $._let_body, ')')
        ),

        _typed_untyped_binding1: $ => repeat1(choice(
            $.untyped_binding,
            $.typed_binding
        )),

        ////////////////////////////////////////////////////////////////////////
        // Do-notation
        ////////////////////////////////////////////////////////////////////////

        // NOTE: we are using $._with_expr instead of $.expr in $._do_stmt
        //       to prevent clashes in examples like "let a = b"

        expr: $ => choice(
            seq($._typed_bindings1, $._const_right_arrow, $.expr),
            seq($._atoms1         , $._const_right_arrow, $.expr),
            // seq($._with_expr      , '='                 , $.expr),
            prec(-1, $._with_expr), // lowest precedence
        ),

        // Level 1 Expressions: Application
        _with_expr: $ => seq(
            repeat(seq($._atoms1, '|')),
            $._application
        ),

        _application: $ => seq(
            repeat($.atom),
            $._expr2
        ),

        // Level 2 Expressions: Lambdas and lets
        lambda: $ => choice(
            seq($._const_lambda,          $._lambda_binding, $._const_right_arrow, $.expr),
            seq($._const_lambda,     '{', $._lambda_clauses_no_single_absurd, '}'),
            seq($._const_lambda, 'where', $._lambda_where_block),
            seq($._const_lambda,          $._lambda_binding),
        ),

        // Level 3 Expressions: Atoms
        _atoms1: $ => (repeat1($.atom)), // right
        atom: $ => choice(
            $._atom_curly,
            $._atom_no_curly
        ),

        _atom_curly: $ => seq('{', optional($.expr), '}'),
        _atom_no_curly: $ => choice(
            $.qualified_name,
            $.literal,
            '?',
            "_",
            'Set',
            'Prop',
            'quote',
            'quoteTerm',
            'unquote',
            bracket(
              $.expr,
              BKT_CURL2,
              BKT_IDIOM,
              BKT_PAREN,
            ),
            bracket(
              seq(),
              BKT_CURL2,
              BKT_PAREN,
            ),
            seq('.', $.atom),
            $.record_assignments,
            $._const_ellipsis,
        ),

    }
});

////////////////////////////////////////////////////////////////////////
// Generic combinators
////////////////////////////////////////////////////////////////////////

function sepR(sep, rule) {
    return seq(rule, repeat(seq(sep, rule)))
}

function sepL(sep, rule) {
    return seq(repeat(seq(rule, sep)), rule)
}

function indent($, ...rule) {
    return seq(
        $._indent,
        ...rule,
        $._dedent
    );
}

// 1 or more $RULE ending with a NEWLINE
function block($, rules) {
    return indent($, repeat1(seq(rules, $._newline)));
}

////////////////////////////////////////////////////////////////////////
// Language-specific combinators
////////////////////////////////////////////////////////////////////////

function maybeDotted(rule) {
    return choice(
        rule,               // Relevant
        seq('.', rule),     // Irrelevant
        seq('..', rule),    // NonStrict
    );
}

function flatten(arrOfArrs) {
  return arrOfArrs.reduce((res, arr) => [...res, ...arr], []);
}

function bracketWith(fn, ...pairs) {
  return choice(...flatten(pairs).map(([left, right]) => fn(left, right)));
}

function bracket(expr, ...pairs) {
  return bracketWith((left, right) => seq(left, expr, right), ...pairs);
}
