legacy/corpus/grammar/field.txt
==================
Field
==================

field
    a : A
    b : B

---

(source_file
    (field
        (type_sig (field_name)
            (expr (atom (qualified_name))))
        (type_sig (field_name)
            (expr (atom (qualified_name))))))

==================
Field (same line)
==================

field a : A

---

(source_file
    (field
        (type_sig (field_name)
            (expr (atom (qualified_name))))))

==================
Field (same line + block)
==================

field a : A
      b : B

---

(source_file
    (field
        (type_sig (field_name)
            (expr (atom (qualified_name))))
        (type_sig (field_name)
            (expr (atom (qualified_name))))))
